--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,15 @@
 
  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <spark.version>2.4.7</spark.version>
+  <hadoop.version>2.10.1</hadoop.version>
  </properties>
 
  <dependencies>
   <dependency>
    <groupId>org.apache.spark</groupId>
    <artifactId>spark-core_2.12</artifactId>
-   <version>2.4.3</version>
+   <version>${spark.version}</version>
   </dependency>
   <dependency>
    <groupId>org.springframework.boot</groupId>
@@ -38,20 +40,8 @@
    </dependency>
   </dependencies>
  </dependencyManagement>
- <build>
-  <plugins>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.8.0</version>
-    <configuration>
-     <source>1.8</source>
-     <target>1.8</target>
-    </configuration>
-   </plugin>
-  </plugins>
- </build>
  <modules>
   <module>spark-intro</module>
+  <module>spark-helloworld</module>
  </modules>
 </project>
