--- a/spark-streaming-updatestatebykey/pom.xml
+++ b/spark-streaming-updatestatebykey/pom.xml
@@ -8,23 +8,13 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.ymmihw</groupId>
-  <artifactId>spark-helloworld</artifactId>
+  <artifactId>spark-streaming-updatestatebykey</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.12</artifactId>
+      <artifactId>spark-streaming_2.12</artifactId>
       <version>${spark.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.databricks</groupId>
-      <artifactId>spark-csv_2.11</artifactId>
-      <version>1.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>${hadoop.version}</version>
     </dependency>
   </dependencies>
   <build>
