--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,6 @@
     <module>spark-operations</module>
     <module>spark-streaming-quick-example</module>
     <module>spark-streaming-updatestatebykey</module>
+    <module>spark-streaming-window</module>
   </modules>
 </project>
