--- a/spark-helloworld/pom.xml
+++ b/spark-helloworld/pom.xml
@@ -13,7 +13,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.12</artifactId>
+      <artifactId>spark-sql_${scala.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
     <dependency>
