--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,7 @@
     <module>spark-intro</module>
     <module>spark-helloworld</module>
     <module>spark-operations</module>
-    <module>spark-streaming-quick-example</module>
-    <module>spark-streaming-updatestatebykey</module>
-    <module>spark-streaming-window</module>
     <module>spark-sql</module>
+    <module>spark-streaming</module>
   </modules>
 </project>
