--- a/spark-streaming/spark-streaming-quick-example/pom.xml
+++ b/spark-streaming/spark-streaming-quick-example/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.ymmihw</groupId>
-    <artifactId>spark</artifactId>
+    <artifactId>spark-streaming</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.ymmihw</groupId>
-  <artifactId>spark-streaming-window</artifactId>
+  <artifactId>spark-streaming-quick-example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
