--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <modules>
-    <module>spark-sql-dataframe</module>
-  </modules>
   <parent>
     <groupId>com.ymmihw</groupId>
     <artifactId>spark</artifactId>
@@ -15,4 +13,8 @@
   <artifactId>spark-sql</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <modules>
+    <module>spark-sql-dataframe</module>
+    <module>inferring-schema-using-reflection</module>
+  </modules>
 </project>
