--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -19,5 +19,6 @@
     <module>spark-sql-data-sources</module>
     <module>by-examples-create-dataframe</module>
     <module>by-examples-with-column</module>
+    <module>by-examples-with-column-renamed</module>
   </modules>
 </project>
