--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -22,5 +22,6 @@
     <module>by-examples-with-column-renamed</module>
     <module>by-examples-drop</module>
     <module>by-examples-filter-and-where</module>
+    <module>by-examples-when-otherwise-and-case-when</module>
   </modules>
 </project>
