--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -24,6 +24,7 @@
     <module>by-examples-filter-and-where</module>
     <module>by-examples-when-otherwise-and-case-when</module>
     <module>by-examples-collect-data-to-driver</module>
+    <module>by-examples-remove-duplicate-rows</module>
   </modules>
   <dependencies>
     <dependency>
