--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -35,6 +35,7 @@
     <module>by-examples-map-vs-map-partitions</module>
     <module>by-examples-foreach-partition-vs-foreach</module>
     <module>by-examples-cache</module>
+    <module>by-examples-udf</module>
   </modules>
   <dependencies>
     <dependency>
