--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -40,6 +40,7 @@
     <module>by-examples-map-type</module>
     <module>by-examples-flatten-nested-struct</module>
     <module>by-examples-flatten-array-of-array</module>
+    <module>by-examples-explode-array-and-map</module>
   </modules>
   <dependencies>
     <dependency>
