--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -41,6 +41,7 @@
     <module>by-examples-flatten-nested-struct</module>
     <module>by-examples-flatten-array-of-array</module>
     <module>by-examples-explode-array-and-map</module>
+    <module>by-examples-sample</module>
   </modules>
   <dependencies>
     <dependency>
