--- a/spark-streaming/pom.xml
+++ b/spark-streaming/pom.xml
@@ -13,9 +13,36 @@
   <artifactId>spark-streaming</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_${scala.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>4.4.0</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>compile</goal>
+                <goal>testCompile</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <modules>
     <module>spark-streaming-quick-example</module>
     <module>spark-streaming-updatestatebykey</module>
     <module>spark-streaming-window</module>
+    <module>by-examples-files-from-directory</module>
   </modules>
 </project>
